Fix transitions in skills to work on mobile devices

--- a/sass/components/sections/_section-text-with-skills.scss
+++ b/sass/components/sections/_section-text-with-skills.scss
@@ -67,6 +67,7 @@
 
 	.section__skill {
 		margin-bottom: 15px;
+		overflow: hidden;
 
 		h5 {
 			margin-bottom: 2px;
@@ -82,10 +83,12 @@
 
 	.section__skill-bar-fill {
 		position: relative;
+		width: 100%;
 		height: 100%;
 		border-radius: 20px;
 		background-color: $color-light-blue;
-		transition: width 1s 1s ease-out;
+		transform: translate3d(0, 0, 0);
+		transition: transform 1s 1s ease-out;
 
 		&:after {
 			content: attr(data-percents);
@@ -95,7 +98,7 @@
 			bottom: 100%;
 			font-size: 13px;
 			opacity: .95;
-			transition: opacity .3s 1.1s;
+			transition: opacity .3s 2.5s;
 		}
 	}
 
@@ -105,7 +108,7 @@
 
 	.section__skills:not(.animated) {
 		.section__skill-bar-fill {
-			width: 0 !important;
+			transform: translate3d(-100%, 0, 0);
 
 			&:after {
 				opacity: 0;
@@ -153,16 +156,6 @@
 			h4 {
 				font-size: 14px;
 				margin-bottom: 3px;
-			}
-		}
-
-		.section__skills {
-			@for $i from 1 through 10 {
-				.section__skill:nth-child(#{$i}) {
-					.section__skill-bar-fill {
-						transition: none;
-					}
-				}
 			}
 		}
 	}
